# particle-sandbox

./: CMakeLists.txt  README.md
include/: Particle.hpp  ParticleSystem.hpp  SimulationConfig.hpp  Vec2.hpp
src/: ParticleSystem.cpp  main.cpp
